--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,8 +5,11 @@
     <h3>À propos</h3>
     <h4>Chat Manager</h4>
 
-    <p>Auteurs: noms des équipiers</p>
-    <p>Répertoire GitHub du projet</p>
+    <p>Auteurs: Cedric Pierre</p>
+    <p>
+        Répertoire GitHub du projet
+        https://github.com/Afernu/ChatManager
+    </p>
 <pre>
     Département d'informatique
     Collège Lionel-Groulx
