--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     @Helper.IconCmd("Accounts", "UserList", "menu-Icon fa fa-users", "Gestion des usagers...")
                     @Helper.IconCmd("Accounts", "GroupEmail", "menu-Icon fa fa-envelope", "Courriel...")
                     @Helper.IconCmd("Accounts", "LoginsJournal", "menu-Icon fa fa-calendar", "Journal des connexions...")
+                    @Helper.ImageLink("Accounts", "Conversations", "/favicon.png", "menu-Images", "Conversations")
                 }
 
                 @Helper.AvatarProfilLink(currentUser)
