--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,10 +5,10 @@
     <h3>À propos</h3>
     <h4>Chat Manager</h4>
 
-    <p>Auteurs: Cedric Pierre</p>
+    <p>Auteur: Cedric Pierre</p>
     <p>
-        Répertoire GitHub du projet
-        https://github.com/Afernu/ChatManager
+        Répertoire GitHub du projet :
+        <a href="https://github.com/Afernu/ChatManager">Lien du site GitHub</a>
     </p>
 <pre>
     Département d'informatique
